# Darma

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample.wanvc
.github/workflows/: ci.yml
benchmarks/: calibrate_lambdas.py  ffmpeg_codecs.py  rd_plot.py  run_benchmark.py
cool_chic/: __init__.py  bitstream.py  bitstream_v2.py  caption.py  codec.py  hash_grid.py  hypernet.py  inr.py  mnerv.py  nerv.py  prior.py  quantize.py  residual_codec.py  serialize.py  train_hypernet.py  train_mnerv.py  train_nerv.py  train_per_image.py  train_per_video.py  train_prior.py  train_qat.py  train_video_qat.py
cool_chic/benchmarks/: hypernet_speedup.py  plot_rd.py  rd_benchmark.py  rd_hybrid.py  rd_mnerv.py  rd_nerv.py  rd_vs_ffmpeg.py  w1_vs_w2.py  w1_w2_w3.py  w2_push.py  w2_w3_push.py
cool_chic/scripts/: add_captions.py  decode_video.py  encode_video.py  make_diverse_clips.py  make_inr_dataset.py  make_inr_dataset_incremental.py  make_inr_dataset_v2.py  make_nerv_dataset.py  make_vimeo_clips.py  (+1 more)
docs/: INSTALL_WINDOWS.md  JOURNEY.md
entropy_coder/: __init__.py  ans.py  pup.py  range_coder.py
logs/: sanity.jsonl  sanity.out  track_b.jsonl  track_b.out  track_b_orchestrator.out  train.jsonl  train.out
models/: __init__.py  adaptation.py  autoencoder.py  diffusion_residual.py  hyperprior.py  motion.py  numerics.py
scripts/: decode.py  encode.py  install.py  jit_trace.py  track_b_run.py
tests/: test_pup_roundtrip.py  test_smoke_forward.py
training/: adapt_gop.py  train_base.py
utils/: __init__.py  datasets.py  gop.py  metrics.py  quantize.py  video_io.py
(+7 files in other folders)
