[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wanvc"
version = "0.1.0"
description = "Weight-Adaptive Neural Video Codec"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "entropy_coder*", "utils*", "benchmarks*", "training*"]

[tool.ruff]
line-length = 110
target-version = "py310"
